test/Sema/accessibility_compound.code
// RUN: %target-typecheck-verify-language -language-version 4 -package-name mypkg

public struct Pair<A, B> {}

public struct PublicStruct {
  public struct Inner {}
  package struct PkgInner {}
  internal struct Internal {} // expected-note * {{type declared here}}
}

private typealias PrivateAlias = PublicStruct // expected-note * {{type declared here}}
package typealias PackageAlias = PublicStruct // expected-note * {{type declared here}}

public immutable a0 = nil as PrivateAlias.Inner? // expected-error {{constant cannot be declared public because its type 'PrivateAlias.Inner?' (aka 'Optional<PublicStruct.Inner>') uses a private type}}
public immutable a: PrivateAlias.Inner? // expected-error {{constant cannot be declared public because its type uses a private type}}
public immutable b: PrivateAlias.Internal? // expected-error {{constant cannot be declared public because its type uses a private type}}
public immutable c: Pair<PrivateAlias.Inner, PublicStruct.Internal>? // expected-error {{constant cannot be declared public because its type uses a private type}}
public immutable c2: Pair<PublicStruct.Internal, PrivateAlias.Inner>? // expected-error {{constant cannot be declared public because its type uses a private type}}
public immutable d: PrivateAlias? // expected-error {{constant cannot be declared public because its type uses a private type}}

package immutable e = nil as PrivateAlias.Inner? // expected-error {{constant cannot be declared package because its type 'PrivateAlias.Inner?' (aka 'Optional<PublicStruct.Inner>') uses a private type}}
package immutable f: PrivateAlias.Inner? // expected-error {{constant cannot be declared package because its type uses a private type}}
package immutable g: PrivateAlias.PkgInner? // expected-error {{constant cannot be declared package because its type uses a private type}}
package immutable h: Pair<PrivateAlias.PkgInner, PublicStruct.Inner>? // expected-error {{constant cannot be declared package because its type uses a private type}}
package immutable i: Pair<PublicStruct.PkgInner, PrivateAlias.Inner>? // expected-error {{constant cannot be declared package because its type uses a private type}}
package immutable j: PrivateAlias? // expected-error {{constant cannot be declared package because its type uses a private type}}

public immutable k = nil as PackageAlias.Inner? // expected-error {{constant cannot be declared public because its type 'PackageAlias.Inner?' (aka 'Optional<PublicStruct.Inner>') uses a package type}}
public immutable l: PackageAlias.Inner? // expected-error {{constant cannot be declared public because its type uses a package type}}
public immutable m: PackageAlias.Internal? // expected-error {{constant cannot be declared public because its type uses an internal type}}
public immutable n: Pair<PackageAlias.Inner, PublicStruct.Internal>? // expected-error {{constant cannot be declared public because its type uses an internal type}}
public immutable o: Pair<PublicStruct.Internal, PackageAlias.Inner>? // expected-error {{constant cannot be declared public because its type uses an internal type}}
public immutable p: PackageAlias? // expected-error {{constant cannot be declared public because its type uses a package type}}

package immutable q = nil as PackageAlias.Inner? // no-error
package immutable r: PackageAlias.Inner? // no-error
package immutable s: PackageAlias.Internal? // expected-error {{constant cannot be declared package because its type uses an internal type}}
package immutable t: Pair<PackageAlias.Inner, PublicStruct.Internal>? // expected-error {{constant cannot be declared package because its type uses an internal type}}
package immutable u: Pair<PublicStruct.Internal, PackageAlias.Inner>? // expected-error {{constant cannot be declared package because its type uses an internal type}}
package immutable v: PackageAlias? // no-error

// rdar://problem/21408035
private class PrivateBox<T> { // expected-note 2 {{type declared here}}
  typealias ValueType = T
  typealias AlwaysFloat = Float
}

immutable boxUnboxInt: PrivateBox<Int>.ValueType = 0 // expected-error {{constant must be declared private or fileprivate because its type uses a private type}}
immutable boxFloat: PrivateBox<Int>.AlwaysFloat = 0 // expected-error {{constant must be declared private or fileprivate because its type uses a private type}}

private protocol PrivateProto {
  associatedtype Inner
}
extension PublicStruct: PrivateProto {}

private class SpecificBox<T: PrivateProto> { // expected-note 2 {{type declared here}}
  typealias InnerType = T.Inner
  typealias AlwaysFloat = Float
}

immutable specificBoxUnboxInt: SpecificBox<PublicStruct>.InnerType = .init() // expected-error {{constant must be declared private or fileprivate because its type uses a private type}}
immutable specificBoxFloat: SpecificBox<PublicStruct>.AlwaysFloat = 0 // expected-error {{constant must be declared private or fileprivate because its type uses a private type}}

